FACULDADE/ISEP/2_ANO/2_SEMESTRE/sem4pi-2024-2025-sem4pi_2024_2025_g13-1/lprog/us251/gramaticaParser.py
# Generated from gramatica.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramaticaParser ( Parser ):

    grammarFileName = "gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'DSL'", "'version'", "'.'", "';'", "'DroneType'", 
                     "'Position'", "'='", "'('", "','", "')'", "'Velocity'", 
                     "'Distance'", "'Line'", "'Rectangle'", "'lightsOn'", 
                     "'lightsOff'", "'move'", "'rotate'", "'group'", "'endgroup'", 
                     "'pause'", "'PI'", "'+'", "'-'", "'*'", "'/'", "'YELLOW'", 
                     "'RED'", "'GREEN'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "IDENTIFICADOR", "INTEIRO", 
                      "DECIMAL", "WS" ]

    RULE_programa = 0
    RULE_cont = 1
    RULE_drone = 2
    RULE_posicaodecl = 3
    RULE_velocidadedecl = 4
    RULE_distanciadecl = 5
    RULE_figura = 6
    RULE_acao = 7
    RULE_grupo = 8
    RULE_pausa = 9
    RULE_numero = 10
    RULE_expressao = 11
    RULE_termo = 12
    RULE_sinal = 13
    RULE_operacao = 14
    RULE_nomefigura = 15
    RULE_posicao = 16
    RULE_distancia = 17
    RULE_dronetipo = 18
    RULE_direcao = 19
    RULE_duracao = 20
    RULE_velocidade = 21
    RULE_centro = 22
    RULE_axis = 23
    RULE_angulo = 24
    RULE_cor = 25

    ruleNames =  [ "programa", "cont", "drone", "posicaodecl", "velocidadedecl", 
                   "distanciadecl", "figura", "acao", "grupo", "pausa", 
                   "numero", "expressao", "termo", "sinal", "operacao", 
                   "nomefigura", "posicao", "distancia", "dronetipo", "direcao", 
                   "duracao", "velocidade", "centro", "axis", "angulo", 
                   "cor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    IDENTIFICADOR=30
    INTEIRO=31
    DECIMAL=32
    WS=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEIRO(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.INTEIRO)
            else:
                return self.getToken(gramaticaParser.INTEIRO, i)

        def cont(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.ContContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.ContContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = gramaticaParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(gramaticaParser.T__0)
            self.state = 53
            self.match(gramaticaParser.T__1)
            self.state = 54
            self.match(gramaticaParser.INTEIRO)
            self.state = 55
            self.match(gramaticaParser.T__2)
            self.state = 56
            self.match(gramaticaParser.INTEIRO)
            self.state = 57
            self.match(gramaticaParser.T__2)
            self.state = 58
            self.match(gramaticaParser.INTEIRO)
            self.state = 59
            self.match(gramaticaParser.T__3)
            self.state = 61 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 60
                self.cont()
                self.state = 63 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1076394080) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def drone(self):
            return self.getTypedRuleContext(gramaticaParser.DroneContext,0)


        def posicaodecl(self):
            return self.getTypedRuleContext(gramaticaParser.PosicaodeclContext,0)


        def velocidadedecl(self):
            return self.getTypedRuleContext(gramaticaParser.VelocidadedeclContext,0)


        def distanciadecl(self):
            return self.getTypedRuleContext(gramaticaParser.DistanciadeclContext,0)


        def figura(self):
            return self.getTypedRuleContext(gramaticaParser.FiguraContext,0)


        def acao(self):
            return self.getTypedRuleContext(gramaticaParser.AcaoContext,0)


        def grupo(self):
            return self.getTypedRuleContext(gramaticaParser.GrupoContext,0)


        def pausa(self):
            return self.getTypedRuleContext(gramaticaParser.PausaContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_cont

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCont" ):
                listener.enterCont(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCont" ):
                listener.exitCont(self)




    def cont(self):

        localctx = gramaticaParser.ContContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_cont)
        try:
            self.state = 73
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.drone()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.posicaodecl()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.velocidadedecl()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.distanciadecl()
                pass
            elif token in [13, 14]:
                self.enterOuterAlt(localctx, 5)
                self.state = 69
                self.figura()
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 6)
                self.state = 70
                self.acao()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 7)
                self.state = 71
                self.grupo()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 8)
                self.state = 72
                self.pausa()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DroneContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(gramaticaParser.IDENTIFICADOR, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_drone

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDrone" ):
                listener.enterDrone(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDrone" ):
                listener.exitDrone(self)




    def drone(self):

        localctx = gramaticaParser.DroneContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_drone)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(gramaticaParser.T__4)
            self.state = 76
            self.match(gramaticaParser.IDENTIFICADOR)
            self.state = 77
            self.match(gramaticaParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PosicaodeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(gramaticaParser.IDENTIFICADOR, 0)

        def numero(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.NumeroContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.NumeroContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_posicaodecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPosicaodecl" ):
                listener.enterPosicaodecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPosicaodecl" ):
                listener.exitPosicaodecl(self)




    def posicaodecl(self):

        localctx = gramaticaParser.PosicaodeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_posicaodecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(gramaticaParser.T__5)
            self.state = 80
            self.match(gramaticaParser.IDENTIFICADOR)
            self.state = 81
            self.match(gramaticaParser.T__6)
            self.state = 82
            self.match(gramaticaParser.T__7)
            self.state = 83
            self.numero()
            self.state = 84
            self.match(gramaticaParser.T__8)
            self.state = 85
            self.numero()
            self.state = 86
            self.match(gramaticaParser.T__8)
            self.state = 87
            self.numero()
            self.state = 88
            self.match(gramaticaParser.T__9)
            self.state = 89
            self.match(gramaticaParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VelocidadedeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(gramaticaParser.IDENTIFICADOR, 0)

        def expressao(self):
            return self.getTypedRuleContext(gramaticaParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_velocidadedecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVelocidadedecl" ):
                listener.enterVelocidadedecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVelocidadedecl" ):
                listener.exitVelocidadedecl(self)




    def velocidadedecl(self):

        localctx = gramaticaParser.VelocidadedeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_velocidadedecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(gramaticaParser.T__10)
            self.state = 92
            self.match(gramaticaParser.IDENTIFICADOR)
            self.state = 93
            self.match(gramaticaParser.T__6)
            self.state = 94
            self.expressao()
            self.state = 95
            self.match(gramaticaParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DistanciadeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(gramaticaParser.IDENTIFICADOR, 0)

        def expressao(self):
            return self.getTypedRuleContext(gramaticaParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_distanciadecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDistanciadecl" ):
                listener.enterDistanciadecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDistanciadecl" ):
                listener.exitDistanciadecl(self)




    def distanciadecl(self):

        localctx = gramaticaParser.DistanciadeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_distanciadecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(gramaticaParser.T__11)
            self.state = 98
            self.match(gramaticaParser.IDENTIFICADOR)
            self.state = 99
            self.match(gramaticaParser.T__6)
            self.state = 100
            self.expressao()
            self.state = 101
            self.match(gramaticaParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FiguraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(gramaticaParser.IDENTIFICADOR, 0)

        def posicao(self):
            return self.getTypedRuleContext(gramaticaParser.PosicaoContext,0)


        def distancia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.DistanciaContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.DistanciaContext,i)


        def dronetipo(self):
            return self.getTypedRuleContext(gramaticaParser.DronetipoContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_figura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFigura" ):
                listener.enterFigura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFigura" ):
                listener.exitFigura(self)




    def figura(self):

        localctx = gramaticaParser.FiguraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_figura)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.match(gramaticaParser.T__12)
                self.state = 104
                self.match(gramaticaParser.IDENTIFICADOR)
                self.state = 105
                self.match(gramaticaParser.T__7)
                self.state = 106
                self.posicao()
                self.state = 107
                self.match(gramaticaParser.T__8)
                self.state = 108
                self.distancia()
                self.state = 109
                self.match(gramaticaParser.T__8)
                self.state = 110
                self.dronetipo()
                self.state = 111
                self.match(gramaticaParser.T__9)
                self.state = 112
                self.match(gramaticaParser.T__3)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(gramaticaParser.T__13)
                self.state = 115
                self.match(gramaticaParser.IDENTIFICADOR)
                self.state = 116
                self.match(gramaticaParser.T__7)
                self.state = 117
                self.posicao()
                self.state = 118
                self.match(gramaticaParser.T__8)
                self.state = 119
                self.distancia()
                self.state = 120
                self.match(gramaticaParser.T__8)
                self.state = 121
                self.distancia()
                self.state = 122
                self.match(gramaticaParser.T__8)
                self.state = 123
                self.dronetipo()
                self.state = 124
                self.match(gramaticaParser.T__9)
                self.state = 125
                self.match(gramaticaParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AcaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(gramaticaParser.IDENTIFICADOR, 0)

        def cor(self):
            return self.getTypedRuleContext(gramaticaParser.CorContext,0)


        def direcao(self):
            return self.getTypedRuleContext(gramaticaParser.DirecaoContext,0)


        def duracao(self):
            return self.getTypedRuleContext(gramaticaParser.DuracaoContext,0)


        def velocidade(self):
            return self.getTypedRuleContext(gramaticaParser.VelocidadeContext,0)


        def centro(self):
            return self.getTypedRuleContext(gramaticaParser.CentroContext,0)


        def axis(self):
            return self.getTypedRuleContext(gramaticaParser.AxisContext,0)


        def angulo(self):
            return self.getTypedRuleContext(gramaticaParser.AnguloContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_acao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAcao" ):
                listener.enterAcao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAcao" ):
                listener.exitAcao(self)




    def acao(self):

        localctx = gramaticaParser.AcaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_acao)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(gramaticaParser.IDENTIFICADOR)
                self.state = 130
                self.match(gramaticaParser.T__2)
                self.state = 131
                self.match(gramaticaParser.T__14)
                self.state = 132
                self.match(gramaticaParser.T__7)
                self.state = 133
                self.cor()
                self.state = 134
                self.match(gramaticaParser.T__9)
                self.state = 135
                self.match(gramaticaParser.T__3)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.match(gramaticaParser.IDENTIFICADOR)
                self.state = 138
                self.match(gramaticaParser.T__2)
                self.state = 139
                self.match(gramaticaParser.T__15)
                self.state = 140
                self.match(gramaticaParser.T__3)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 141
                self.match(gramaticaParser.IDENTIFICADOR)
                self.state = 142
                self.match(gramaticaParser.T__2)
                self.state = 143
                self.match(gramaticaParser.T__16)
                self.state = 144
                self.match(gramaticaParser.T__7)
                self.state = 145
                self.direcao()
                self.state = 146
                self.match(gramaticaParser.T__8)
                self.state = 147
                self.duracao()
                self.state = 148
                self.match(gramaticaParser.T__8)
                self.state = 149
                self.velocidade()
                self.state = 150
                self.match(gramaticaParser.T__9)
                self.state = 151
                self.match(gramaticaParser.T__3)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 153
                self.match(gramaticaParser.IDENTIFICADOR)
                self.state = 154
                self.match(gramaticaParser.T__2)
                self.state = 155
                self.match(gramaticaParser.T__17)
                self.state = 156
                self.match(gramaticaParser.T__7)
                self.state = 157
                self.centro()
                self.state = 158
                self.match(gramaticaParser.T__8)
                self.state = 159
                self.axis()
                self.state = 160
                self.match(gramaticaParser.T__8)
                self.state = 161
                self.angulo()
                self.state = 162
                self.match(gramaticaParser.T__8)
                self.state = 163
                self.velocidade()
                self.state = 164
                self.match(gramaticaParser.T__9)
                self.state = 165
                self.match(gramaticaParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GrupoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def acao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.AcaoContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.AcaoContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_grupo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrupo" ):
                listener.enterGrupo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrupo" ):
                listener.exitGrupo(self)




    def grupo(self):

        localctx = gramaticaParser.GrupoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_grupo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(gramaticaParser.T__18)
            self.state = 171 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 170
                self.acao()
                self.state = 173 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==30):
                    break

            self.state = 175
            self.match(gramaticaParser.T__19)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PausaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEIRO(self):
            return self.getToken(gramaticaParser.INTEIRO, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_pausa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPausa" ):
                listener.enterPausa(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPausa" ):
                listener.exitPausa(self)




    def pausa(self):

        localctx = gramaticaParser.PausaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_pausa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(gramaticaParser.T__20)
            self.state = 178
            self.match(gramaticaParser.T__7)
            self.state = 179
            self.match(gramaticaParser.INTEIRO)
            self.state = 180
            self.match(gramaticaParser.T__9)
            self.state = 181
            self.match(gramaticaParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumeroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sinal(self):
            return self.getTypedRuleContext(gramaticaParser.SinalContext,0)


        def INTEIRO(self):
            return self.getToken(gramaticaParser.INTEIRO, 0)

        def DECIMAL(self):
            return self.getToken(gramaticaParser.DECIMAL, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_numero

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumero" ):
                listener.enterNumero(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumero" ):
                listener.exitNumero(self)




    def numero(self):

        localctx = gramaticaParser.NumeroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_numero)
        try:
            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.sinal()
                self.state = 184
                self.match(gramaticaParser.INTEIRO)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 186
                self.sinal()
                self.state = 187
                self.match(gramaticaParser.DECIMAL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.TermoContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.TermoContext,i)


        def operacao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.OperacaoContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.OperacaoContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_expressao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao" ):
                listener.enterExpressao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao" ):
                listener.exitExpressao(self)




    def expressao(self):

        localctx = gramaticaParser.ExpressaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expressao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.termo()
            self.state = 197
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 125829120) != 0):
                self.state = 192
                self.operacao()
                self.state = 193
                self.termo()
                self.state = 199
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numero(self):
            return self.getTypedRuleContext(gramaticaParser.NumeroContext,0)


        def expressao(self):
            return self.getTypedRuleContext(gramaticaParser.ExpressaoContext,0)


        def sinal(self):
            return self.getTypedRuleContext(gramaticaParser.SinalContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_termo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermo" ):
                listener.enterTermo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermo" ):
                listener.exitTermo(self)




    def termo(self):

        localctx = gramaticaParser.TermoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_termo)
        try:
            self.state = 212
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 200
                self.numero()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 201
                self.match(gramaticaParser.T__21)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 202
                self.match(gramaticaParser.T__7)
                self.state = 203
                self.expressao()
                self.state = 204
                self.match(gramaticaParser.T__9)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 206
                self.sinal()
                self.state = 207
                self.match(gramaticaParser.T__21)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 209
                self.sinal()
                self.state = 210
                self.numero()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SinalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticaParser.RULE_sinal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSinal" ):
                listener.enterSinal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSinal" ):
                listener.exitSinal(self)




    def sinal(self):

        localctx = gramaticaParser.SinalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_sinal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 215
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 214
                _la = self._input.LA(1)
                if not(_la==23 or _la==24):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperacaoContext(ParserRuleContext):
        __slots__ = 'parser'
